welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: type mismatch;
 found   : String
 required: Int
decalage= litMessage
          ^