welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
var hauteur: Int= getMondeHauteur() 
var T = new Array[Color] (hauteur+2)
var decalage: Int=0

for ( k <- 0 to (hauteur-1 )){
	
	T(k)=getCouleurSol()
		if (estFaceMur) {
			recule(hauteur-1)
		}else avance()

}
for (s <- 0 to hauteur-2 ) {
	gauche()
avance()
droite ()
litMessage()
decalage= litMessage


	
	for (o <- 0 to (hauteur - 1)) {
		setCouleurBrosse( T((o+decalage) % hauteur))
		baisseBrosse()
		leveBrosse()  
		            if (estFaceMur) {
		            	recule(hauteur-1)
		            	
		       
		            	
		              } else avance()
		}
	}
}

	
